--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
             </div>
             <div class="news-grid">
                 <article class="news-card featured">
-                    <img src="imgi_15_Screenshot-2024-02-29-at-1.09.51 PM.png?height=250&width=400" alt="Featured News" class="news-image">
+                    <img src="maxresdefault.jpg?height=250&width=400" alt="Featured News" class="news-image">
                     <div class="news-content">
                         <span class="news-category">Featured</span>
                         <span class="news-date">January 15, 2025</span>
